--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,4 +3,5 @@ description: DQL DSLink
 dependencies:
   dslink:
     git: https://github.com/IOT-DSA/sdk-dslink-dart.git
+#    path: /Users/alex/DSA/DartSDK
   quiver: "^0.21.4"
