Basic support for expressions.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,3 +5,4 @@ dependencies:
     git: https://github.com/IOT-DSA/sdk-dslink-dart.git
 #    path: /Users/alex/DSA/DartSDK
   quiver: "^0.21.4"
+  math_expressions: "^0.2.0+1"
