--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,5 +6,6 @@ dependencies:
   quiver: "^0.21.4"
   math_expressions: "^0.2.0+1"
   petitparser: "^1.5.1"
+  package_config: "^0.1.3"
 dev_dependencies:
   test: "^0.12.11"
