--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: dql
 description: DQL DSLink
 dependencies:
+  async: "^1.9.0"
   dslink:
     git: https://github.com/IOT-DSA/sdk-dslink-dart.git
   quiver: "^0.21.4"
