--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".arc/libdglogik"]
 	path = .arc/libdglogik
-	url = git@git.dev.dglogik.com:dglogik/dgphabricator.git
+	url = git@git.dev.dglogik.com:dglogik/dgarcanist.git
